<resources>
    <string name="app_name">MAD_Tutorial03</string>
    <string name="number01">Number 01</string>
    <string name="number02">Number 02</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Multiply">x</string>
    <string name="divided">/</string>
    <string name="answer">Answer</string>
    <string name="btn_back">Back</string>
</resources>