<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number01"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/number02"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber1" />

    <EditText
        android:id="@+id/edtNumber1"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/number01"
        android:inputType="number"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/edtNumber2"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/number02"
        android:inputType="number"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="183dp"
        android:layout_height="183dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btnPlus"
        android:onClick="buttonClick"
        android:text="@string/plus"
        android:textSize="34dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber2" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="183dp"
        android:layout_height="183dp"
        android:backgroundTint="@color/btnMultiply"
        android:onClick="buttonClick"
        android:text="@string/Multiply"
        android:textSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="183dp"
        android:layout_height="183dp"
        android:backgroundTint="@color/btnMinus"
        android:onClick="buttonClick"
        android:text="@string/minus"
        android:textSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlus"
        app:layout_constraintTop_toTopOf="@+id/btnPlus"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="183dp"
        android:layout_height="183dp"
        android:backgroundTint="@color/btnDivide"
        android:onClick="buttonClick"
        android:text="@string/divided"
        android:textSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMultiply"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

</androidx.constraintlayout.widget.ConstraintLayout>